# surreal-model-layer

./: Cargo.toml  README.md  build_docs.sh
docs/: crates.js  help.html  index.html  search-index.js  settings.html  src-files.js
docs/implementors/core/clone/: trait.Clone.js
docs/implementors/core/convert/: trait.From.js
docs/implementors/core/error/: trait.Error.js
docs/implementors/core/fmt/: trait.Debug.js  trait.Display.js
docs/implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
docs/implementors/serde/de/: trait.Deserialize.js
docs/implementors/serde/ser/: trait.Serialize.js
docs/src/surreal_model_layer/: error.rs.html  main.rs.html
docs/src/surreal_model_layer/model/: datatypes.rs.html  edge.rs.html  edges.rs.html  error.rs.html  label.rs.html  mod.rs.html  transaction.rs.html  users.rs.html
docs/surreal_model_layer/: all.html  enum.Error.html  fn.delete_tables.html  fn.main.html  fn.test_datatypes.html  fn.test_delete_tables.html  fn.test_edges.html  fn.test_labelbamc.html  fn.test_labelbmc.html  fn.test_transactionbmc.html  fn.test_users.html  index.html  sidebar-items.js  type.Result.html
docs/surreal_model_layer/error/: enum.Error.html  index.html  type.Result.html
docs/surreal_model_layer/model/: index.html  sidebar-items.js  struct.ModelManager.html
src/: error.rs  main.rs
src/model/: datatypes.rs  edge.rs  edges.rs  error.rs  label.rs  mod.rs  transaction.rs  transaction_transform.rs  user.rs  users.rs
src/model/surreal_store/: base_crud.rs  base_graph.rs  error.rs  general_crud.rs  mod.rs
(+61 files in other folders)
