[package]
name = "surreal-model-layer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
surrealdb = {version = "1.0.0"}
# surrealdb = {version = "1.0.0", features = ["kv-mem", "kv-rocksdb"]}
serde = {version = "1", features = ["derive"]}
serde_json = {version = "1", features = ["preserve_order"]}
serde_with = "3"
tokio = {version = "1", features = ["full", "macros", "rt-multi-thread"]}
bigdecimal = {version = "0.4", features = ["serde"]}
uuid = {version = "1.5", features = ["v4","fast-rng", "serde"]}
ulid = {version = "1.1", features = ["serde"]}
chrono = {version = "0.4", features = ["serde"]}